# usr

./: .gitignore  dl  ssh-config.sh  todo
chromium/: .gitignore  chromium-user
dotfiles/: sym
dotfiles/base/.claude/: CLAUDE.md  settings.json
dotfiles/base/.codex/: AGENTS.md  config.toml
dotfiles/base/.config/alacritty/: alacritty.toml
dotfiles/base/.config/git/: config
dotfiles/base/.config/ish/: config.ish
dotfiles/base/.config/opencode/: opencode.json  tui.json
dotfiles/base/.config/opencode/plugins/: notification.js
dotfiles/base/.config/tmux/: tmux.conf
dotfiles/base/.config/xshi/: config.ini  config.xsh
dotfiles/base/.nerv/: AGENTS.md  config.json  models.json
dotfiles/base/.nerv/skills/: commit.md
dotfiles/base/.pi/agent/: AGENTS.md  models.json  settings.json
macos/: Brewfile  firefox-setup.sh  macos-bloat-sonoma.sh  macos-lean-report.sh  macos-lean-sequoia.sh  macos-lean-tahoe.md  macos-lean-tahoe.sh  make-obsidian-launcher.sh  setup-touchid-sudo.sh  unbound-setup.sh
macos/waterfox/: setup.sh  user.js
macos/waterfox/allow-right-click/: AGENTS.md  README.md  background.js  manifest.json
macos/waterfox/allow-right-click/data/inject/: core.js
macos/waterfox/allow-right-click/data/options/: index.html  index.js
macos/waterfox/host-redirects/: background.js  manifest.json
py/: .gitignore  Justfile  Makefile  README  pyproject.toml
src/: .gitignore
src/su-exec/: .gitignore  Makefile  README.md
src/wol/: Makefile
