[project]
name = "lol"
description = "one venv to rule them all"
version = "0.0.0"
requires-python = "==3.14.4"
dependencies = [
    "yt-dlp",
    #"instaloader",
    #"browser-cookie3",  # for instaloader
    #"spotdl",
    #"beets[fetchart]",
]

[tool.uv.sources]
yt-dlp = { path = "../src/yt-dlp", editable = true }
